--- a/AstraZeneca_coding_exercise.ipynb
+++ b/AstraZeneca_coding_exercise.ipynb
@@ -9,7 +9,7 @@
         "pmQN-rBc_SFy"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPM4g8Hc74pF1ZcN/tv00+C",
+      "authorship_tag": "ABX9TyNCr3PRfEfF6vAbpxR14Ik0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "import matplotlib.pyplot as plt\n",
         "from timeit import default_timer as timer\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,6 +157,8 @@
         "def data_elements_to_n_elements(input_df):\n",
         "  \"\"\"\n",
         "  Calculate and add number of elements by counting elements splitted by comma.\n",
+        "  *important* This is not the most efficient way to count but  the data collection\n",
+        "  is made without any standard. Please see the comment in the bottom of this notebook.\n",
         "  :input_df: dataframe to be processed\n",
         "  :return: processed dataframe or None (if spl_product_data_elements column does not exist)\n",
         "  \"\"\"\n",
@@ -265,7 +267,7 @@
         "  plt.plot(yr_int,val_temp,c = 'r',linewidth=3)\n",
         "  plt.show()\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -347,7 +349,7 @@
         "# write result as csv\n",
         "result_A.to_csv('result_A.csv')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +372,7 @@
       "source": [
         "print(result_A)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +401,7 @@
       "source": [
         "print(data_A.head())"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,7 +431,7 @@
       "source": [
         "plot_task_A(result_A,data_A)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -492,7 +494,7 @@
         "!rm drug_labels_dataset.zip\n",
         "print('Download dataset: Done')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +570,7 @@
         "# write result as csv\n",
         "result_B.to_csv('result_B.csv')"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +602,7 @@
       "source": [
         "print(result_B)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,7 +639,7 @@
       "source": [
         "print(data_B[data_B['year']=='2027'])"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,7 +663,7 @@
       "source": [
         "print(data_B['route'].unique())"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,7 +708,7 @@
       "source": [
         "plot_task_B(result_B,'INTRAVENOUS')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -736,7 +738,7 @@
       "source": [
         "plot_task_B(result_B,'TOPICAL')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -792,7 +794,7 @@
         "from tensorflow.keras import Model, layers, models, optimizers\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 252,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -808,7 +810,7 @@
         "data_x = list(map(int,data_x))\n",
         "data_y = data_C['n_elements'].values.tolist()"
       ],
-      "execution_count": 370,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -844,7 +846,7 @@
         "model = build_model()\n",
         "model.summary()"
       ],
-      "execution_count": 397,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -894,7 +896,7 @@
         "np_x = np.array(data_x)\n",
         "np_y = np.array(data_y)"
       ],
-      "execution_count": 398,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -910,7 +912,7 @@
         "# train model\n",
         ">>> history = model.fit(np_x, np_y, epochs=40, batch_size=64,validation_split=0.2)"
       ],
-      "execution_count": 399,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1019,7 +1021,7 @@
         "plt.legend(['train', 'validation'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 400,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1049,7 +1051,7 @@
         "test = np.array([2022])\n",
         "print(model.predict(test))"
       ],
-      "execution_count": 409,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1083,7 +1085,7 @@
         "!pip install pystan\n",
         "!pip install prophet"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,7 +1146,7 @@
       "source": [
         "from prophet import Prophet\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1163,7 +1165,7 @@
         "df_p['y'] = df_p['n_elements']\n",
         "df = df_p[['ds','y']]\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1180,7 +1182,7 @@
         "m = Prophet()\n",
         "m.fit(df)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1217,7 +1219,7 @@
         "future = m.make_future_dataframe(periods=365)\n",
         "print(future.tail())"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1247,7 +1249,7 @@
         "forecast = m.predict(future)\n",
         "print(forecast[['ds', 'yhat', 'yhat_lower', 'yhat_upper']].tail())"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1276,7 +1278,7 @@
       "source": [
         "fig1 = m.plot(forecast)\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1305,7 +1307,7 @@
       "source": [
         "fig2 = m.plot_components(forecast)\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1376,10 +1378,21 @@
       },
       "source": [
         "\n",
-        "*   There are some comment here about the dataset. The way to count number of ingredients supposed to be simple but there are some comma missing and repeating words in spl_product_data_elements field.\n",
+        "*   There are some comment here about the dataset. The way to count number of ingredients supposed to be simple but there are some comma missing and repeating words in spl_product_data_elements field. In addition, it seem like there is no standard to fill in this spl_product_data_elements field. If the data collection standard is set, this analysis will be more efficient and accurate.\n",
         "*   I am not sure about the definition of \"contained in AstraZeneca medicines\" but I assume that you mean \"manufactured by AstraZeneca\"\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "92nh2Qy1BwWm"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
