--- a/AstraZeneca_coding_exercise.ipynb
+++ b/AstraZeneca_coding_exercise.ipynb
@@ -9,7 +9,7 @@
         "pmQN-rBc_SFy"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNCr3PRfEfF6vAbpxR14Ik0",
+      "authorship_tag": "ABX9TyMd4tpn50+9vjK6pOezhghk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1378,7 +1378,7 @@
       },
       "source": [
         "\n",
-        "*   There are some comment here about the dataset. The way to count number of ingredients supposed to be simple but there are some comma missing and repeating words in spl_product_data_elements field. In addition, it seem like there is no standard to fill in this spl_product_data_elements field. If the data collection standard is set, this analysis will be more efficient and accurate.\n",
+        "*   There are some comment here about the dataset. The way to count number of ingredients supposed to be simple but there are some comma missing and repeating words in spl_product_data_elements field. In addition, it seem like there is no standard to fill in this spl_product_data_elements field. If the data collection standard is set, this analysis will be more efficient and accurate. Speaking of not using comma to split, one can use space and count the unique word. Problem with this is that some words like 'and', 'brown', or 'red' are also filled in the field. So, it is hard to seperate normal word and ingredient name.\n",
         "*   I am not sure about the definition of \"contained in AstraZeneca medicines\" but I assume that you mean \"manufactured by AstraZeneca\"\n",
         "\n"
       ]
